mdtraj/formats/dtr/include/dtrplugin.hxx

void* open_file_read(const char *path, const char *filetype, int *natoms);
int read_timestep2(void *v, molfile_ssize_t n, molfile_timestep_t *ts);
molfile_ssize_t read_times(void *v, molfile_ssize_t start, molfile_ssize_t count, double *times);
void close_file_read(void *v);
void* open_file_write(const char *path, const char *filetype, const int natoms);
int write_timestep(void *v, const molfile_timestep_t *ts);
void close_file_write(void *v);
int read_timestep_metadata(void *v, molfile_timestep_metadata *m);